// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package crimson;

// A host in the database.
message Host {
  // The name of this host on the network. With VLAN ID, uniquely identifies this host.
  string name = 1;
  // The VLAN this host belongs to. With hostname, uniquely identifies this host.
  int64 vlan = 2;
  // The machine backing this host.
  string machine = 3;
  // The operating system backing this host.
  string os = 5;
  // The number of VMs which can be deployed on this host.
  int32 vm_slots = 6;
  // A description of this host.
  string description = 7;
  // The deployment ticket associated with this host.
  string deployment_ticket = 8;
  // TODO(smut): Add IP address.
}

// CreateHostRequest is a request to create a new host in the database.
message CreateHostRequest {
  // The host to create in the database.
  Host host = 1;
}

// ListHostsRequest is a request to list hosts in the database.
message ListHostsRequest {
  // The names of hosts to get.
  repeated string names = 1;
  // The VLANs to filter retrieved hosts on.
  repeated int64 vlans = 2;
  // TODO(smut): Add the rest of the filters.
}

// ListHostsResponse is a response to a request to list hosts.
message ListHostsResponse {
  // The hosts matching this request.
  repeated Host hosts = 1;
  // TODO(smut): Support page tokens.
}
